# Satellite_3D_PWM-Continuous_Thrusters_ReactionWheel

./: .gitignore  CHANGELOG.md  CHANGELOG_2026-01-03.md  CMakeLists.txt  Dockerfile  IMPROVEMENTS_COMPLETED.md  IMPROVEMENT_PLAN.md  Makefile  QUICK_START_IMPROVEMENTS.md  README.md  REMAINING_IMPROVEMENTS.md  V3_COMPLETION_SUMMARY.md  build_log.txt  build_log_2.txt  debug_anim.py  docker-compose.yml  mujoco_viewer.py  package-lock.json  profile_mpc.py  pyproject.toml  requirements.txt  run_dashboard.py  run_simulation.py  run_tests.py  setup.sh
.venv311/: pyvenv.cfg
Cplusplus_build/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  MUJOCO_LOG.TXT  README.md  sim_debug.txt  sim_debug_v3.txt  sim_debug_v4.txt  sim_log.txt  sim_log_v3.txt
Cplusplus_build/config/: control.yaml  main.yaml  mission_test.yaml  vehicle_default.yaml  vehicle_test.yaml
Cplusplus_build/config/control/mpc/: aggressive.yaml  smooth.yaml
Cplusplus_build/config/mission/: 180_rotation.yaml  hull_inspection.yaml  multi_axis_tour.yaml  point_with_yaw.yaml  simple_point.yaml  station_keeping.yaml
Cplusplus_build/config/vehicle/: cube_sat_6u.yaml  inspection_drone_v1.yaml
Cplusplus_build/docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  FAULT_TOLERANCE.md  FLIGHT_DEPLOYMENT.md  INSPECTION_PLANNING.md  PROJECT_STATUS.md  QUICKSTART.md  SPECS.md
Cplusplus_build/include/config/: ConfigSchema.h
Cplusplus_build/include/control/: ControlAllocator.h  MPCController.h  PulseWidthModulator.h
Cplusplus_build/include/core/: Types.h
Cplusplus_build/include/export/: FlightCodeGenerator.h
Cplusplus_build/include/fdir/: FaultManager.h
Cplusplus_build/include/hil/: HILBridge.h
Cplusplus_build/include/io/: ConfigLoader.h  DataLogger.h  SimulationMetrics.h
Cplusplus_build/include/logic/: MissionManager.h
Cplusplus_build/include/physics/: PhysicsEngine.h
Cplusplus_build/include/planner/: InspectionPlanner.h  MeshAnalyzer.h
Cplusplus_build/include/telemetry/: TelemetryServer.h
Cplusplus_build/scripts/: post_processor.py  tui.py  visualize.py
Cplusplus_build/scripts/tui/: __init__.py  menu.py
Cplusplus_build/src/: main.cpp
Cplusplus_build/src/control/: ControlAllocator.cpp  MPCController.cpp  PulseWidthModulator.cpp
Cplusplus_build/src/export/: FlightCodeGenerator.cpp
Cplusplus_build/src/fdir/: FaultManager.cpp
Cplusplus_build/src/hil/: HILBridge.cpp
Cplusplus_build/src/io/: ConfigLoader.cpp  DataLogger.cpp
Cplusplus_build/src/logic/: MissionManager.cpp
Cplusplus_build/src/physics/: PhysicsEngine.cpp
Cplusplus_build/src/planner/: InspectionPlanner.cpp  MeshAnalyzer.cpp
Cplusplus_build/src/telemetry/: TelemetryServer.cpp
Final_Goal/: 00_Product_Vision.md  01_Roadmap.md  02_Phase_1_Configuration_System.md  03_Phase_2_Universal_Physics_Engine.md
OBJ_files/ISS/: ISS.mtl
_legacy_v1/config/: main 2.yaml
_legacy_v1/docs/: ARCHITECTURE.md  FAQ.md  LOGGING.md  MAC_COMPATIBILITY.md  Makefile  PHYSICS_ENGINE 2.md  PLUGIN_DEVELOPMENT_GUIDE.md
_legacy_v1/models/: satellite.xml  satellite_rw.xml
_legacy_v1/scripts/: mujoco_viewer.py  test_rw_control.py  verify_data_integrity.py
_legacy_v1/tests/: conftest.py  test_caching.py  test_data_logger.py  test_error_handling.py  test_mpc_controller.py  test_shape_utils.py  test_simulation_initialization.py  (+5 more)
docs/: AEROSPACE_SOFTWARE_ECOSYSTEM.md  ARCHITECTURE.md  BENCHMARKING.md  BUILDING_DOCS.md  CHANGELOG.md  CONFIG_MIGRATION_GUIDE.md  CONFIG_REFACTOR_PLAN.md  DASHBOARD_USAGE.md  DASHBOARD_VS_PYTHON.md  DEVELOPMENT_GUIDE.md  DOCKER.md  FAQ.md  LOGGING.md  MATHEMATICS.md  PHYSICS_ENGINE.md  PRODUCT_VISION.md  QUICKSTART.md  SATELLITE_CONFIG_DEPRECATION.md  SIMULATION.md  TESTING.md  TROUBLESHOOTING.md  V2.md  V3.md  V4.md  V4_PHASE1_FINAL_REPORT.md  V4_PHASE1_FINAL_STATUS.md  V5_Autonomy_Features.md  VISUALIZATION.md  conf.py  index.rst  mission_builder_plan.md  path_following_mpc_proposal.md  unified_mission_example.json
docs 2/: AEROSPACE_GRADE_ARCHITECTURE.md  AEROSPACE_SIMULATORS_COMPARISON.md  DESKTOP_APPLICATION_PLAN.md  DEVELOPMENT_GUIDE.md  FAQ.md  LEGACY_CODE_REMOVAL_PLAN.md  MATHEMATICS.md  QUICKSTART.md  SIMULATION.md  TESTING.md  V3_RELEASE_NOTES.md  V3_ROADMAP.md  V4_PHASE2_PROGRESS.md  V4_PHASE3_2_PROGRESS.md  V4_ROADMAP.md  VALUE_PROPOSITION.md  index.rst
missions/: SpaceX2.json  SpaceX_Starlink.json  mpcc_demo.json  simple_path.json  thruster_check.json  trial.json  trial3.json  trial4.json  trial5.json
models/: satellite_3d.xml  satellite_fleet.xml  satellite_planar.xml  satellite_rw.xml
models 2/: satellite.xml  satellite_1thruster_rw.xml  satellite_3d.xml  satellite_fleet.xml
scripts/: compare_thrusters.py  mujoco_viewer.py  replay_mujoco.py  repro_headless.py  run_all_tests.py  run_cpp_simulation.py  run_path_following_demo.py  run_simple_motion_test.py  test_fleet.py  test_orbital.py  visualize_cpp.py
scripts 2/: debug_mpc_perf.py  generate_commit_msg.py  simulation_server.py  test_mission.py  verify_3d_spline.py  verify_single_thruster.py
test_plots/: trajectory_3d_interactive.html
tests/: README.md  conftest.py  test_benchmark.py  test_caching.py  test_config.py  test_factories.py  test_integration_basic.py  test_integration_missions.py  test_integration_refactored.py  test_mission_saving.py  test_mission_state_manager.py  test_mission_state_refactor.py  test_model.py  test_mpc_controller.py  test_mpc_controller_path.py  test_navigation_utils.py  test_performance_monitor.py  test_plot_generator.py  test_presets.py  test_property_based.py  test_simulation_context.py  test_simulation_initialization.py  test_simulation_io.py  test_simulation_logger.py  test_simulation_loop.py  test_simulation_state_validator.py  test_thruster_manager.py  test_thruster_toggle.py  test_video_renderer.py
tests 2/: test_benchmark.py  test_caching.py  test_config.py  test_integration_refactored.py  test_model.py  test_mpc_controller.py  test_navigation_utils.py  test_plot_generator.py  test_presets.py  test_thruster_manager.py  test_video_renderer.py
ui/: package-lock.json  package.json
venv_hb/: pyvenv.cfg
(+405 files in other folders)
