
[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "satellite_control"
version = "1.0.0"
authors = [
  { name = "Aevar Ofjord", email = "aevar@ofjord.com" },
]
description = "Satellite MPC Control System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
]

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
# Setup for development install (editable)
editable.rebuild = true
build-dir = "build/{wheel_tag}"
