[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "satellite_control"
version = "1.0.0"
authors = [
  { name = "Aevar Ofjord", email = "aevar@ofjord.com" },
]
description = "Satellite MPC Control System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core numerical
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    
    # Configuration

    "pydantic>=2.0.0",
    
    # CLI and interface
    "typer>=0.9.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "questionary>=2.0.0",
    
    # Data processing
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    
    # Optimization
    "osqp>=0.6.0",
    
    # Web dashboard
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
    "watchfiles>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
# Setup for development install (editable)
editable.rebuild = true
build-dir = "build/{wheel_tag}"
