[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11", "cmake>=3.20", "ninja>=1.10"]
build-backend = "scikit_build_core.build"

[project]
name = "satellite_control"
version = "1.0.0"
authors = [
  { name = "Aevar Ofjord", email = "aevar@ofjord.com" },
]
description = "Satellite MPC Control System"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core numerical
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    
    # Configuration
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    
    # CLI and interface
    "typer>=0.9.0",
    "click>=8.0.0",
    "rich>=10.0.0",
    "questionary>=2.0.0",
    
    # Data processing
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    
    # Visualization
    "plotly>=5.0.0",
    "streamlit>=1.25.0",
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.9",
    "ezdxf>=0.17.0",
    "shapely>=1.8.0",
    
    # Optimization
    "osqp>=0.6.0",
    
    # Web dashboard
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
    "watchfiles>=0.19.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.scikit-build]
cmake.version = ">=3.20"
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_POLICY_VERSION_MINIMUM=3.5"]
# Setup for development install (editable)
editable.rebuild = true
build-dir = "build/{wheel_tag}"
